--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <title>Module2-solution by tuannnm46</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- CSS Base -->
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    hello world
+    <h1>Our Menu</h1>
+    <div class="row">
+      <div class="our-menu">
+        <div class="col-lg-4 col-md-6 col-xs-12">
+          <div class="menu">
+            <h3 class="c-chicken">Chicken</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          </div>
+        </div>
+        <!-- End: Menu -->
+        <div class="col-lg-4 col-md-6 col-xs-12">
+          <div class="menu">
+            <h3 class="c-beef">Beef</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          </div>
+        </div>
+        <!-- End: Menu -->
+        <div class="col-lg-4 col-md-12 col-xs-12">
+          <div class="menu">
+            <h3 class="c-sushi">Sushi</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          </div>
+        </div>
+        <!-- End: Menu -->
+      </div>
+    </div>
   </body>
 </html>
